# turingdb-examples

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  README.md  pyproject.toml  run_jupyter.sh  run_notebooks.sh  sync_to_main.sh
examples/data/clinical_healthcare/: BRCA.csv  Disease_symptom_and_patient_profile_dataset.csv
examples/data/finance_companies/: companies_relationship.csv
examples/data/london_transport/: london_stations_COMPLETED.csv  london_transport_datasets_London_stations_TO_COMPLETE.csv  london_transport_datasets_tube_link_loads_sat.csv  london_tube_stations_sightseeing_autogen.csv
examples/functions/: functions.py
examples/functions/.ipynb_checkpoints/: functions-checkpoint.py
examples/notebooks/: CREATE_command_TfL_graph.txt  london_transport_TfL.ipynb
examples/notebooks/.ipynb_checkpoints/: london_transport_TfL-checkpoint.ipynb
examples/notebooks/draft/: DEV_split_CREATE_command.ipynb  TEST-turingdb-0.2.7-dev.ipynb  clinical_healthcare.ipynb  finance_companies.ipynb  first_test.ipynb  healthcare_dataset.ipynb  london_transport.ipynb  reactome_OLD.ipynb  supply_chain_eto-chip-explorer.ipynb  test_big_graph.ipynb
examples/notebooks/exploration/: TEST_LOAD_CSV.ipynb
examples/notebooks/public_version/: CiteAb_antibody_data.ipynb  crypto_orbitaal_fraud_detection.ipynb  fraud_detection.ipynb  french_corporate_network.ipynb  healthcare_dataset.ipynb  integrate_rdf_file.ipynb  london_transport_TfL.ipynb  paysim_financial_fraud_detection.ipynb  (+3 more)
examples/reactome-vector-search/: README.md  get_model_info.sh  main.py  ollama.py  pyproject.toml
src/: main.py
src/turingdb_examples/: __init__.py  basic_turingdb_example.py  graph.py  llm.py  utils.py
tests/: README.md  test_examples.py
(+19 files in other folders)
