[project]
name = "turingdb-examples"
version = "0.1.0"
description = "Examples and tutorials for TuringDB usage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.68.0",
    "jupyterlab>=4.4.7",
    "mistralai>=1.9.10",
    "networkx>=3.5",
    "openai>=1.109.1",
    "openpyxl>=3.1.5",
    "turingdb>=0.2.5",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

