[project]
name = "turingdb-examples"
version = "0.1.0"
description = "Examples and tutorials for TuringDB usage"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.68.0",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "mistralai>=1.9.10",
    "networkx>=3.5",
    "openai>=1.109.1",
    "openpyxl>=3.1.5",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.1.1",
    "pyvis>=0.3.2",
    "ruff>=0.13.2",
    "turingdb==0.2.6",
]

keywords = ["turingdb", "examples", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

# Tool configurations
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=src",
    "--cov=examples",
    "--cov-report=html",
    "--cov-report=term-missing"
]

[tool.uv.sources]
turingdb = { path = "../turingdb-sdk-python", editable = true }
